# easyinput

./: .gitignore  configure.ac
src/: Makefile.am  easyinput.c  easyinput.h  terminal.c
